fix: the outside component setting the property visible as false can not really close Modal

--- a/src/components/Modal/modal.less
+++ b/src/components/Modal/modal.less
@@ -8,8 +8,18 @@
     left: 0;
     top: 0;
     display: none;
-    justify-content: center;
-    align-items: center;
+    overflow: auto;
+
+    &__container {
+        width: 350px;
+        position: relative;
+        opacity: 0;
+        margin: 0 auto;
+        margin-top: 15vh;
+        .wdu-bg-plain();
+        .wdu-radius-normal();
+        .out-shadow-normal();
+    }
 
     &__title {
         height: 48px;
@@ -33,27 +43,17 @@
     }
 
     &__body {
-        margin: 8px;
+        padding: 20px;
         overflow: auto;
     }
 
-    &__container {
-        width: 350px;
-        height: 280px;
-        position: relative;
-        opacity: 0;
-        .wdu-bg-plain();
-        .wdu-radius-normal();
-        .out-shadow-normal();
-    }
-
     &__visible {
-        display: flex;
+        display: block;
         opacity: 0;
         animation: maskShow 0.1s ease 0s 1 normal forwards;
 
         .wdu-modal__container {
-            animation: show 0.1s ease 0.2s 1 normal forwards;
+            animation: show 0.3s cubic-bezier(.32,.32,.19,1) 0.2s 1 normal forwards;
         }
     }
 
@@ -62,7 +62,7 @@
         animation: maskHide 0.3s ease 0.2s 1 normal forwards;
 
         .wdu-modal__container {
-            animation: hide 0.3s ease 0s 1 normal forwards;
+            animation: hide 0.3s cubic-bezier(.44, .11, 0, .99) 0s 1 normal forwards;
         }
     }
 
@@ -74,6 +74,7 @@
         .wdu-modal__container {
             width: 100%;
             height: 100%;
+            margin-top: 0;
         }
     }
 }
@@ -100,24 +101,24 @@
 
 @keyframes show {
     from {
-        top: -30px;
         opacity: 0;
+        top: -30px
     }
 
     to {
-        top: 0;
         opacity: 1;
+        top: 0;
     }
 }
 
 @keyframes hide {
     from {
-        top: 0;
         opacity: 1;
+        top: 0;
     }
 
     to {
-        top: -30px;
         opacity: 0;
+        top: -30px;
     }
 }
